# sparsim-py

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.md  NAMESPACE  README.md  pyproject.toml
R/: RcppExports.R  SPARSim-data.R  SPARSim-package.R  SPARSim_batch_effect.R  SPARSim_estimate.R  SPARSim_parameter.R  SPARSim_simulate.R  SPARSim_spikein.R  SPARSim_utilities.R
data/: Bacher_param_preset.RData  Brain_10X_param_preset.RData  Camp_param_preset.RData  Chu_param_preset.RData  Engel_param_preset.RData  Example_count_matrix.RData  Horning_param_preset.RData  Macosko_param_preset.RData  PBMC_10X_param_preset.RData  Saunders_param_preset.RData  T_10X_param_preset.RData  Tung_param_preset.RData
man/: Bacher_param_preset.Rd  Brain_10X_param_preset.Rd  Camp_count_matrix.Rd  Camp_param_preset.Rd  Chu_param_preset.Rd  Engel_param_preset.Rd  Example_count_matrix.Rd  Horning_param_preset.Rd  Macosko_param_preset.Rd  PBMC_10X_param_preset.Rd  SPARSim.Rd  SPARSim_compute_batch_effect_factors.Rd  SPARSim_create_DE_genes_parameter.Rd  SPARSim_create_batch.Rd  SPARSim_create_batch_effect_matrix.Rd  SPARSim_create_batch_parameter.Rd  SPARSim_create_batch_set.Rd  SPARSim_create_simulation_parameter.Rd  SPARSim_create_spikein_mix.Rd  SPARSim_create_spikein_parameter.Rd  SPARSim_create_spikein_set.Rd  SPARSim_estimate_intensity.Rd  SPARSim_estimate_library_size.Rd  SPARSim_estimate_parameter_from_data.Rd  SPARSim_estimate_variability.Rd  SPARSim_simulation.Rd  Saunders_param_preset.Rd  T_10X_param_preset.Rd  Tung_param_preset.Rd  Zheng_param_preset.Rd  get_rng_state.Rd  (+6 more)
(+9 files in other folders)
