[project]
name = "sparsim"
version = "0.1.0"
description = "A Python port of the R package SPARSim"
authors = [
    {name = "Gemini", email = "gemini@google.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
